# libxom-openssl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
benchmarks/: setup.c  throughput.c
provider/include/: aes_xom.h
provider/src/: aes_aesni.s  aes_vaes.s  hmac_sha256.s  xom_aes_128_ctr.c  xom_aes_128_gcm.c  xom_aes_common.c  xom_hmac_sha256.c  xom_provider.c  xom_subpage_pool.c  xom_subpage_pool.cpp
